# VisualStudioStressTest

./: .gitignore  BigTest_000.cc  BigTest_001.cc  BigTest_002.cc  BigTest_003.cc  BigTest_004.cc  BigTest_005.cc  BigTest_006.cc  BigTest_007.cc  CMakeLists.txt  Readme.md  cleanTMPfiles.bat  issue_2_exploring.txt  issue_reproduced.txt
